<resources>
    <string name="app_name">UnlimintSdk</string>

    <string name="bind_button_text">Bind bank card</string>
    <string name="pay_button_text">Pay with bank card</string>
    <string name="pay_with_token_button_text">Pay with saved bank card</string>
    <string name="card_masked_pan">**** %1$s</string>
    <string name="home_screen_title">Casual sneakers</string>
    <string name="home_screen_text">Easy to get on and wear all day. Keeping you comfortable as you run. Lightweight and responsive, breathable, and secure.</string>
    <string name="home_screen_price"><font color="#808080">Price:</font> <b>352.00 USD</b></string>
    <string name="main_button_text">Pay</string>
    <string name="button_link_to_card_text">Link a bank card</string>
    <string name="method_payment_name">Bank card</string>
    <string name="method_payment_with_token_name">Bank card token</string>
    <string name="token_input_label_text">Your token</string>
    <string name="token_input_hint_text">Enter a value</string>
    <string name="button_continue_with_token_text">Continue</string>
    <string name="home_screen_toolbar_title">Unlimint SDK</string>
    <string name="payment_with_token_toolbar_title">Payment token</string>
</resources>