<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

     <ImageView
         android:id="@+id/mainView"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:scaleType="centerCrop"
         app:layout_constraintHeight_percent="0.4"
         android:src="@drawable/home_screen_main_image"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
    
    <TextView
        android:id="@+id/title"
        style="@style/SdkDemoStyle.TextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:textStyle="bold"
        android:textSize="20sp"
        android:text="@string/home_screen_title"
        app:layout_constraintTop_toBottomOf="@id/mainView"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/text"
        style="@style/SdkDemoStyle.TextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:textSize="@dimen/sdk_demo_caption_12"
        android:text="@string/home_screen_text"
        android:textColor="@color/description_text_color"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/price"
        style="@style/SdkDemoStyle.TextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/unlimint_text_15"
        android:layout_marginTop="32dp"
        android:text="@string/home_screen_price"
        app:layout_constraintTop_toBottomOf="@id/text"
        app:layout_constraintStart_toStartOf="parent" />

    <android.widget.Button
        android:id="@+id/buyButton"
        style="@style/SdkDemoStyle.Button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/sdk_demo_space_x2"
        android:layout_marginEnd="@dimen/sdk_demo_space_x2"
        app:layout_constraintBottom_toTopOf="@id/bankCardButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/main_button_text" />

    <TextView
        android:id="@+id/bankCardButton"
        style="@style/SdkDemoStyle.TextView"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginEnd="0dp"
        android:textColor="@color/color_edittext_button"
        android:layout_marginStart="0dp"
        android:paddingTop="24dp"
        android:paddingBottom="32dp"
        android:text="@string/button_link_to_card_text"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>